--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,10 +1,18 @@
+/* LOGO AND NAV BAR*/
 header{
 display: flex;
 justify-content: space-between;
 font-family: Verdana;
  font-size: 14px;
  font-weight: bold;
- border: 2px black solid;
+ padding-bottom: 2px;
+ border-bottom: 1px black solid;
+ z-index: 5;
+background-color: white;
+width: -webkit-fill-available;
+padding-right: 15px;
+position: fixed;
+top: -1px;
 }
 .logo{
 color: MediumAquamarine;
@@ -18,35 +26,126 @@ padding: 20px 10px;
 a{
   color: black;
 }
+  /* BIG CONTAINER*/
+
 .container{
-  display: inline-flex;
-border: 2px black solid;
+display: inline-flex;
 justify-content: space-between;
 width: 95%;
-padding: 10px 10px;
+padding: 100px 0 0 0;
 margin: 10px 10px;
+position: relative;
 }
+/* LEFT COLUMN*/
 .left-column{
   display: flex;
   flex-direction: column;
-border: 1px black solid;
 width: 630px;
-
+padding: 5px 15px 5px 15px;
 }
+
+.main-story-header{
+display: flex;
+background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png");
+}
+#main-story-header{
+  font-size: 40px;
+}
+.fall{
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png");
+  display: flex;
+  height: 300px;
+}
+.cameraman{
+  display: flex;
+  height: 300px;
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png");
+}
+.left-col-lower{
+  display: inline-flex;
+}
+.left-col-lower-one{
+padding: 5px 15px 5px 15px;
+}
+.left-col-lower-two{
+padding: 5px 15px 5px 15px;
+}
+/*MIDDLE COLUMN */
 .mid-column{
   flex-direction: column;
 display: flex;
-border: 1px black solid;
 width: 300px;
-
+padding: 5px 15px 5px 15px;
 }
+.cat{
+  display: flex;
+  height: 300px;
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png");
+}
+
+
+/* RIGHT COLUMN*/
 .right-column{
   display: flex;
   flex-direction: column;
-  border: 1px black solid;
   width: 240px;
+  padding: 5px 15px 5px 15px;
+}
+.bites-title{
+  font-size: 16px;
+}
+.bites span{
+  display: block;
+  background-color: WhiteSmoke;
+font-family: Verdana;
+font-size: 12px;
+color: DimGray;
+border-bottom: 1px black solid;
+padding: 7px 0 7px 0 ;
 
 }
-div{
- border: 1px black solid;
+
+.story-text{
+  font-family: Georgia;
+    font-size: 17px;
+    color: black;
+}
+{
+  font-size: 40px;
+}
+.image-text{
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+}
+/*FOOTER */
+.footer{
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+width: 100%;
+height: 325px;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+}
+.footer-logo{
+  display: inline-flex;
+  align-items: baseline;
+}
+.footer-logo h3{
+  font-family: Georgia;
+   font-size: 16px;
+   font-weight: bold;
+   color: white;
+}
+.footer-logo nav{
+
+}
+.copyright{
+font-size: 10px;
+font-family: Verdana;
 }
