--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -46,20 +46,23 @@ padding: 5px 15px 5px 15px;
 
 .main-story-header{
 display: flex;
-background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png");
+background-image: url("../images/main-story-img.png");
+background-repeat: no-repeat;
 }
 #main-story-header{
   font-size: 40px;
 }
 .fall{
-  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png");
+  background-image: url("../images/fall.png");
   display: flex;
+  background-repeat: no-repeat;
   height: 300px;
 }
 .cameraman{
   display: flex;
   height: 300px;
-  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png");
+  background-image: url("../images/hipster-camera-man.png");
+  background-repeat: no-repeat;
 }
 .left-col-lower{
   display: inline-flex;
@@ -80,7 +83,8 @@ padding: 5px 15px 5px 15px;
 .cat{
   display: flex;
   height: 300px;
-  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png");
+  background-image: url("../images/cat-boss.png");
+  background-repeat: no-repeat;
 }
 
 
